# miniz_public

./: .gitignore  CMakeLists.txt
cmake/: minizBuildConfig.cmake.in  minizConfig.cmake.in
